[package]
name = "yuko-task"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "yuko-todo-list"
path = "src/main.rs"
# Следующая строка отключит консоль для Windows
windows_subsystem = "windows"

[dependencies]
egui = "0.29"
eframe = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
